Fixing #4026: Office2003 skin has no toolbar button borders in High Contrast in IE7.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@5274 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/office2003/toolbar.css
+++ b/_source/skins/office2003/toolbar.css
@@ -240,6 +240,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	opacity: 0.70; /* Safari, Opera and Mozilla */
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
+	border: 1px solid transparent;
 }
 
 .cke_skin_office2003 .cke_hc .cke_button a,
